1998-09-14  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gartab.adb: Suppress calls to global critical section which
 	were done in the middle of a blocking procedure. We probably
 	should simplify Enter_Critical_Section and Leave_Critical_Section
 	now.

	* s-garpar.ads, s-garuni.ads, s-garuni.adb, s-parint.adb,
 	s-rpc.adb: Change instanciation name of
 	System.Garlic.Table.Complex.

1998-09-13  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gartcp.adb: Part of the Garlic full re-writting. Remove
 	protected objects. Adapt to the new protocol. Remove unused
 	procedures.

1998-09-11  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garhea.adb: Workaround to avoid bad returned value assignment
 	on Solaris (probably GNAT bug). We need this to detect GLADE bugs
 	caused by the recent massive checkins.

1998-09-09  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garhea.adb: Change boot protocol to avoid multiple
 	initialization messages. For a partition boot, a partition sends
 	its partition info (location, termination, reconnection, name) to
 	the boot partition. The boot partition replies with two
 	messages. The first one contains the boot partition info. The
 	second one contains the partition info and its partition id. The
 	boot protocol is no longer in charge of allocating a partition id.
  	Remove all the protected objects and use those defined in
 	Garlic.Utils (we will use soft links later on). For this, we use
 	the same package used in Filters and Units. Has_Arrived is split
 	in two separate procedures. The first one extracts partition id,
 	opcode and unfilter the remaining stream. The second one process
 	the unfiltered stream. Always use Self_PID and Get_My_Partition_ID
 	is supposed to initialize and get the partition id during
 	elaboration.

	* s-garhea.ads: Change most of the procedure signatures. Move some
 	types into Garlic.Types. Remove procedure Is_Shutdown_In_Progress
 	to use a shared variable.
